#pragma once

enum class PropulsionType {
    Jet,
    Propeller
};